@@ -43,7 +43,6 @@ package org.netbeans.modules.glassfish.javaee;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import org.netbeans.api.java.platform.JavaPlatform;
@@ -53,7 +52,6 @@ import org.netbeans.modules.j2ee.deployment.plugins.spi.J2eePlatformImpl;
 import org.netbeans.modules.glassfish.spi.ServerUtilities;
 import org.netbeans.modules.j2ee.deployment.devmodules.api.J2eeModule;
 import org.netbeans.api.j2ee.core.Profile;
-import org.netbeans.modules.glassfish.spi.GlassfishModule;
 import org.netbeans.modules.j2ee.deployment.devmodules.api.J2eePlatform;
 import org.netbeans.modules.j2ee.deployment.plugins.spi.support.LookupProviderSupport;
 import org.netbeans.spi.project.libraries.LibraryImplementation;
@@ -61,6 +59,7 @@ import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
 import org.openide.util.ImageUtilities;
 import org.openide.util.Lookup;
+import org.openide.util.RequestProcessor;
 import org.openide.util.lookup.Lookups;
     
 /**
@@ -70,7 +69,8 @@ import org.openide.util.lookup.Lookups;
 public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
     
     private Hk2DeploymentManager dm;
-    private LibraryImplementation[] libraries;
+    private final LibraryImplementation lib = new J2eeLibraryTypeProvider().createLibrary();
+    private LibraryImplementation[] libraries = { lib };
     private Hk2JavaEEPlatformFactory pf;
 
     /**
@@ -102,6 +102,8 @@ public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
     private static final String KEYSTORE_LOCATION = "config/keystore.jks";
     private static final String TRUSTSTORE_LOCATION = "config/cacerts.jks";
 
+    private static final String EMBEDDED_EJB_CONTAINER_PATH = "lib/embedded/glassfish-embedded-static-shell.jar";
+
     /**
      * 
      * @param toolName 
@@ -125,11 +127,15 @@ public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
         }
         if("eclipseLinkPersistenceProviderIsDefault".equals(toolName)) {
             return true;
-        }        
+        }
+        String gfRootStr = dm.getProperties().getGlassfishRoot();
+        if (J2eePlatform.TOOL_EMBEDDABLE_EJB.equals(toolName)) {
+            File jar = new File(gfRootStr, EMBEDDED_EJB_CONTAINER_PATH);
+            return jar.exists() && jar.isFile() && jar.canRead();
+        }
 
         File wsLib = null;
         
-        String gfRootStr = dm.getProperties().getGlassfishRoot();
         if (gfRootStr != null) {
             wsLib = ServerUtilities.getJarName(gfRootStr, "webservices(|-osgi).jar");
         }
@@ -182,6 +188,9 @@ public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
      */
     public File[] getToolClasspathEntries(String toolName) {
         String gfRootStr = dm.getProperties().getGlassfishRoot();
+        if (J2eePlatform.TOOL_EMBEDDABLE_EJB.equals(toolName)) {
+            return new File[] { new File(gfRootStr, EMBEDDED_EJB_CONTAINER_PATH) };
+        }
         if (TOOL_WSGEN.equals(toolName) || TOOL_WSIMPORT.equals(toolName)) {
             String[] entries = new String[] {"webservices(|-osgi).jar", //NOI18N
                                              "webservices-api(|-osgi).jar", //NOI18N
@@ -293,7 +302,9 @@ public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
      * @return 
      */
     public LibraryImplementation[] getLibraries() {
-        return libraries.clone();
+        synchronized (lib) {
+            return libraries.clone();
+        }
     }
     
     /**
@@ -337,11 +348,15 @@ public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
     }
     
     private void initLibraries() {
-        LibraryImplementation lib = new J2eeLibraryTypeProvider().createLibrary();
-        lib.setName(pf.getLibraryName()); 
-        lib.setContent(J2eeLibraryTypeProvider.VOLUME_TYPE_CLASSPATH, dm.getProperties().getClasses());
-        lib.setContent(J2eeLibraryTypeProvider.VOLUME_TYPE_JAVADOC, dm.getProperties().getJavadocs());
-        libraries = new LibraryImplementation[] {lib};
+        RequestProcessor.getDefault().post(new Runnable() {
+            public void run() {
+                synchronized (lib) {
+                    lib.setName(pf.getLibraryName());
+                    lib.setContent(J2eeLibraryTypeProvider.VOLUME_TYPE_CLASSPATH, dm.getProperties().getClasses());
+                    lib.setContent(J2eeLibraryTypeProvider.VOLUME_TYPE_JAVADOC, dm.getProperties().getJavadocs());
+                }
+            }
+        });
     }
     
     @Override
@@ -372,7 +387,11 @@ public class Hk2JavaEEPlatformImpl extends J2eePlatformImpl {
             if (J2eePlatform.TOOL_PROP_JVM_OPTS.equals(propertyName)) {
                 if(domainPath != null) {
                     StringBuilder sb = new StringBuilder();
-                    sb.append("-Djava.system.class.loader=org.glassfish.appclient.client.acc.agent.ACCAgentClassLoader -javaagent:");
+                    sb.append("-Djava.system.class.loader=org.glassfish.appclient.client.acc.agent.ACCAgentClassLoader -Djava.endorsed.dirs=");
+                     sb.append(quotedString(new File(root,"lib/endorsed").getAbsolutePath()));
+                    sb.append(":");
+                     sb.append(quotedString(new File(root,"modules/endorsed").getAbsolutePath()));
+                     sb.append(" -javaagent:");
                      sb.append(quotedString(new File(root,"modules/gf-client.jar").getAbsolutePath()));
                       sb.append("=mode=acscript,arg=-configxml,arg=");
                       sb.append(quotedString(new File(domainPath, "config/sun-acc.xml").getAbsolutePath()));
